@@ -1,3 +1,10 @@
+Mon, 05 Nov 2007 00:21:39 +0100 <thp@perli.net>
+Remove extracted cover art when deleting episode files
+
+	* src/gpodder/util.py: Apply modified version of a patch from
+	Nick (nikosapi.org) that is better suited for deleting cover art that
+	has been extracted with the new eyeD3 cover art extraction code
+
 Mon, 05 Nov 2007 00:17:12 +0100 <thp@perli.net>
 Patch from Nick (nikosapi) to support eyeD3 cover art extraction
 
